Bug 162488 - Landscape writer docs print in truncated Portrait
Summary: Landscape writer docs print in truncated Portrait
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:25.8.6 target:26...
Keywords: bibisected, bisected, regression
: 171317 (view as bug list)
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2024-08-16 01:25 UTC by ravenkwill
Modified: 2026-04-14 00:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing landscape document printing as truncated portrait (222.00 KB, image/png)
2024-08-16 01:26 UTC, ravenkwill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ravenkwill 2024-08-16 01:25:44 UTC
Description:
As of installing 24.2.5.2, I cannot print landscape documents. They show up in portrait, truncated (see screenshot attached).

I can print landscape from pdf's, using foxit pdf reader.

Problem persists in safe mode

I'm running Widows 11 Home
Version	10.0.22631 Build 22631

On Lenovo 82R9

Steps to Reproduce:
1. Create Landscape document in writer
2. Press print
3. Document shows in portrait with document truncated
4. Go into printer properties - if it states portrait change to landscape.
5. Click okay 
6. Still shows in portrait truncated.

Actual Results:
Document prints in truncated portrait

Expected Results:
Document prints in landscape


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: bffef4ea93e59bebbeaf7f431bb02b1a39ee8a59
CPU threads: 12; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 ravenkwill 2024-08-16 01:26:34 UTC
Created attachment 195843 [details]
Screenshot showing landscape document printing as truncated portrait
Comment 2 BogdanB 2024-08-16 03:53:55 UTC
I noticed the same at work. If you change the paper size from letter to A4 it will work.
Comment 3 BogdanB 2024-08-16 05:14:17 UTC
About my last comment, I need to mention that I reproduce this with Windows, at work.

Working well with
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Also working well with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dda85e275d70d6365009042b8e207337f2e712c2
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Seems just a Windows bug.
Comment 4 Buovjaga 2024-09-11 13:05:40 UTC
No problem with a landscape Letter.

Version: 24.2.2.0.0+ (X86_64) / LibreOffice Community
Build ID: dfbe587e1ef565225ceb4a66c23c76ae0e3a8329
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3e8183e0c4b4c116cbd9187bfdfa7dfdf447805e
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded
Comment 5 ravenkwill 2024-12-05 23:51:01 UTC
As of 24.8.3.2, problem still continues. The A4 workaround seems to work
Comment 6 ravenkwill 2024-12-06 18:23:23 UTC
Bug seems to be only for printing 8.5x11. A3 and A4 print as expected
Comment 7 ravenkwill 2024-12-10 22:27:47 UTC
Another observation: The problem exists when I choose my printer (Epson xp15000) from the print screen, or on Microsoft XPS Document Writer. The page sets up correctly on Print to file, fax, or Microsoft Print to PDF.
Comment 8 ravenkwill 2024-12-10 22:32:22 UTC
Sorry, it's weirder than that. I'll post a little later
Comment 9 BogdanB 2024-12-11 04:23:51 UTC
See if my bug is not the same as yours: https://bugs.documentfoundation.org/show_bug.cgi?id=164088
Comment 10 BogdanB 2025-01-12 05:48:56 UTC Comment hidden (obsolete)
Comment 11 Buovjaga 2025-01-12 09:07:22 UTC
(In reply to BogdanB from comment #10)
> *** Bug 164665 has been marked as a duplicate of this bug. ***

I'm not sure about this duplication, because Miguel says in bug 164665 comment 2:

> Latest version that works on the ones I have installed.
> Version: 25.2.0.1 (X86_64) / LibreOffice Community

This bug is reported against 24.2.5.2, however. Bug 164665 also talks about switching printers. In any case, Saburo could try to bibisect the particular issue.
Comment 12 Saburo 2025-01-13 05:23:08 UTC
In my report TDF164665, this occurs in A4 landscape.
The bisecting result is the following branch point:
https://git.libreoffice.org/core/+/61f8fb648ecf9a20ee8abec0e8d3fad3e666db5e%5E%21

If this bug report comment 7 is about Microsoft XPS Document writer, it seems to have occurred since LibO7.1. Please give me some time.
Comment 13 Saburo 2025-01-13 07:47:19 UTC
I think this is the branch point for whether or not you get the paper size wrong with Microsoft XPS Document writer. Sorry if I'm wrong.

https://git.libreoffice.org/core/+/9355d020e0b6bec6c6e08bd5155ed1428df5f674%5E%21
Comment 14 Buovjaga 2025-01-13 09:42:55 UTC
(In reply to Saburo from comment #13)
> I think this is the branch point for whether or not you get the paper size
> wrong with Microsoft XPS Document writer. Sorry if I'm wrong.
> 
> https://git.libreoffice.org/core/+/
> 9355d020e0b6bec6c6e08bd5155ed1428df5f674%5E%21

Ok, that's a backport to 7.1 of this which was to 7.2 originally: 651e9e7278fffa79248fb173432de0af4a622b5d
tdf#135590 rotated paper sizes reported as portrait size they are not
Comment 15 Saburo 2025-01-18 09:32:37 UTC
correct
7.0.8

First time is incorrect
7.1.8 and 7.2.7
Select "Microsoft XPS Document Writer" from the drop-down list.
1st time
Preview
 216mm(User Defined) x 279mm Portrait
Page Layout
 Paper size:User Defined 119mm x 197mm

2nd time(Select the same printer from the drop-down list twice in a row.)
Preview
 279mm(Letter) x 216mm Landscape
Page Layout
 Paper size:Letter 279mm x 216mm

First time is incorrect.
7.3.7 - now
1st time
Preview
  216mm(User Defined) x 279mm Portrait
Page Layout
 Paper size: Not selected (tdf#146046 ?)
2nd time
Preview
 279mm(User Defined) x 216mm Landscape
Page Layout
 Paper size:Letter 279mm x 216mm
Comment 16 ravenkwill 2025-10-13 17:45:48 UTC
Problem persists.
Comment 17 Justin L 2025-10-24 00:02:05 UTC
I'm assuming this is fixed by 7.4. If not, then it might be fixed by the changes coming for bug 166185.
Comment 18 Duffey O. 2025-11-18 10:04:15 UTC
Is there a solution to this problem?
As a big company, we just migrate from LO 7.6.7 to 25.2.4.4 and many documents to should be printed in Landscape are changing to Portrait when another Printer is choosen.
Many users impacted by us...
Comment 19 Buovjaga 2025-11-18 10:16:32 UTC
(In reply to Duffey O. from comment #18)
> Is there a solution to this problem?
> As a big company, we just migrate from LO 7.6.7 to 25.2.4.4 and many
> documents to should be printed in Landscape are changing to Portrait when
> another Printer is choosen.
> Many users impacted by us...

Did you check what comment 17 said? As you are a big company, surely you have a support contract with someone: https://www.libreoffice.org/get-help/professional-support/ ?
Comment 21 ravenkwill 2026-01-03 02:40:13 UTC
Now running 25.8.4.2, problem persists.
Comment 22 Buovjaga 2026-02-10 06:58:56 UTC
Any update on how 26.2 behaves for the people affected by this?
Comment 23 BogdanB 2026-02-10 07:39:24 UTC Comment hidden (obsolete)
Comment 24 BogdanB 2026-02-10 09:05:26 UTC Comment hidden (obsolete)
Comment 25 Mike Kaganski 2026-02-20 10:46:50 UTC
(In reply to ravenkwill from comment #7)
> The problem exists when I choose my printer (Epson xp15000) from the print
> screen, or on Microsoft XPS Document Writer. The page sets up correctly on
> Print to file, fax, or Microsoft Print to PDF.

From this, it *seems* that this is the same as bug 164665 comment 13, specifically for Microsoft XPS Document Writer. I have downloaded and installed Epson XP15000 driver, but couldn't reproduce using that - possibly some specific settings must be set to reproduce; but I dedicate this bug to the problem observed on Microsoft XPS Document Writer, using LibreOffice Writer, with landscape page switches to portrait when the problematic printer is selected. Everything else will be off-topic here.
Comment 26 Mike Kaganski 2026-02-20 10:53:09 UTC
https://gerrit.libreoffice.org/c/core/+/199824
Comment 27 Commit Notification 2026-02-20 13:40:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6171ccd8e6a4ee668fa526f8351e1b4e4fa0a0e2

tdf#162488: do not assume printer drivers only providing portrait paper

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2026-02-20 18:59:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9e54023fe79f6dc800050f0d8f133606c7f3157d

tdf#162488: do not assume printer drivers only providing portrait paper

It will be available in 25.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2026-02-20 18:59:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/53e0e78af0acaa3cf71edf81379ed2f1f4dc8343

tdf#162488: do not assume printer drivers only providing portrait paper

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Alistair Saywell 2026-04-14 00:15:16 UTC
*** Bug 171317 has been marked as a duplicate of this bug. ***