tdf#162488: do not assume printer drivers only providing portrait paper

This assumption is false e.g. for Microsoft XPS Document Writer, where
both portrait and landscape paper are in the list. The orientation and
the size of the paper must be detected from the dimensions.

Change-Id: Ibcfc68f64243ec144743a385f73586ca67f0cbe5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199824
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 6171ccd8e6a4ee668fa526f8351e1b4e4fa0a0e2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199876
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>